Closed Bug 24122 Opened 25 years ago Closed 25 years ago

[MLK] Fix for leaking nsIInterfaceInfoManager

Categories

(Core :: XPCOM, defect, P3)

defect

Tracking

()

RESOLVED FIXED

People

(Reporter: beard, Assigned: dougt)

Details

This fixes a 27k leak.

Index: mozilla/xpcom/proxy/src/nsProxyEventClass.cpp
===================================================================
RCS file: /cvsroot/mozilla/xpcom/proxy/src/nsProxyEventClass.cpp,v
retrieving revision 1.20
diff -r1.20 nsProxyEventClass.cpp
199c199
<     nsIInterfaceInfoManager *iim = XPTI_GetInterfaceInfoManager();
---
>     nsCOMPtr<nsIInterfaceInfoManager> iim =
getter_AddRefs(XPTI_GetInterfaceInfoManager());
Status: NEW → ASSIGNED
you rock beard.  checkin it in.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
checked in.
You need to log in before you can comment on or make changes to this bug.