fixes bug 24122.  submitted by beard.